Bug 358550 - Payee cannot be matched by name in list when it contains semicolon
Summary: Payee cannot be matched by name in list when it contains semicolon
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.6.6
Platform: Debian unstable Linux
: NOR major
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-01-25 18:32 UTC by Josef Kufner
Modified: 2018-03-28 08:00 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.0
Sentry Crash Report:


Attachments
Bug in action (103.61 KB, image/gif)
2016-01-25 18:43 UTC, Josef Kufner
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Josef Kufner 2016-01-25 18:32:10 UTC
See attached screenshots.

When adding payee name to list, it inteprets semicolons as separators and adds multiple names instead one with semicolon.

Reproducible: Always

Steps to Reproduce:
1. Set transaction matching to 'Match on name listed below'
2. Enter something with semicolon, i.e. 'A;B'
3. Click Add button

Actual Results:  
4. One payee name is added
5. Click Apply button
6. Names are split in two, i.e. 'A' and 'B' instead of 'A;B'

Expected Results:  
4. One payee name is added
5. Click Apply button
6. One payee name is still there

I guess it is because payee names are separated with semicolon in database or something like that.
Comment 1 Josef Kufner 2016-01-25 18:43:16 UTC
Created attachment 96839 [details]
Bug in action
Comment 2 wojnilowicz 2017-05-14 04:42:08 UTC
Git commit c5dcfd6cca71fad85947a69cb1b957042609ec5d by Łukasz Wojniłowicz.
Committed on 14/05/2017 at 04:40.
Pushed by wojnilowicz into branch 'master'.

Separate payees with newline instead of semicolon

Differential Revision: https://phabricator.kde.org/D5687

M  +10   -4    kmymoney/mymoney/mymoneypayee.cpp

https://commits.kde.org/kmymoney/c5dcfd6cca71fad85947a69cb1b957042609ec5d