Separate payees with newline instead of semicolon

BUG:358550

Differential Revision: https://phabricator.kde.org/D5687